--- a/index.html
+++ b/index.html
@@ -13,25 +13,31 @@
 
   <div class="container">
 
-    <main>
-      <div class="main-container">
-        <img src="images/illustration-hero.svg" alt="a person listen to music with headphones">
+    <main class="main-container">
+      <img class="img" src="images/illustration-hero.svg" alt="a person listen to music with headphones">
+
+      <div class="text-container">
         <h1>Order Summary</h1>
-        <p>
+        <p class="description">
           You can now listen to millions of songs, audiobooks, and podcasts on any
           device anywhere you like!
         </p>
+
         <div class="plan-container">
-          img
-          <div class="price-container">
-            <p>Annual Plan</p>
-            <p>$59.99/year</p>
+          <div class="icon-price-container">
+            <img class="icon" src="images/icon-music.svg" alt="Music icon">
+            <div class="price-container">
+              <p class="annual-plan">Annual Plan</p>
+              <p class="price">$59.99/year</p>
+            </div>
           </div>
           <a href="#">Change</a>
         </div>
-        <button>Proceed to Payment</button>
-        <button>Cancel Order</button>
+
+        <button class="btn btn-blue">Proceed to Payment</button>
+        <button class="btn btn-transparent">Cancel Order</button>
       </div>
+      
     </main>
 
     <footer>
